--- a/src/scss/mobile/mobile.scss
+++ b/src/scss/mobile/mobile.scss
@@ -37,6 +37,10 @@
 	&.theme-light .menu {
 		--interactive-normal: var(--background-modifier-hover);
 	}
+	&.theme-light.minimal-light-tonal .workspace-drawer-tab-options {
+		// Fixes multiple transparency layers due to --bg3 transparency
+		--interactive-normal: rgb(from color-mix(in srgb, var(--bg2), var(--bg3))r g b / 1);
+	  }
 
 	.workspace-drawer.mod-left.is-pinned {
 		width:var(--mobile-left-sidebar-width);
